update link to notebook

--- a/notebooks/2_Web_Scraping_with_Selenium.ipynb
+++ b/notebooks/2_Web_Scraping_with_Selenium.ipynb
@@ -20,7 +20,7 @@
         "*   Selenium\n",
         "*   Chromium-chromedriver\n",
         "\n",
-        "<a href=\"https://github.com/mauropelucchi/unimib_masterbi_2020/blob/master/notebooks/2_Web_Scraping_with_Selenium.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
+        "<a href=\"https://colab.research.google.com/drive/1_WyM24eXWf-pdcqJKCcsb1pWwnbEWRi8?authuser=2#scrollTo=VYfg3I_fSt6e\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>\n"
       ]
     },
     {
