--- a/notebooks/2_Web_Scraping_with_Selenium.ipynb
+++ b/notebooks/2_Web_Scraping_with_Selenium.ipynb
@@ -2025,6 +2025,43 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v0F53Zz7JRN2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "6860a39f-db43-4b18-b8f5-21a9c070ecac"
+      },
+      "source": [
+        "!zip -r \"/content/images.zip\" \"/content/images/\"\n"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  adding: content/images/ (stored 0%)\n",
+            "  adding: content/images/img_1706943935.jpg (deflated 0%)\n",
+            "  adding: content/images/img_632552919.jpg (deflated 0%)\n",
+            "  adding: content/images/img_224052425.jpg (deflated 0%)\n",
+            "  adding: content/images/img_2047084002.jpg (deflated 3%)\n",
+            "  adding: content/images/img_186177193.jpg (deflated 0%)\n",
+            "  adding: content/images/img_305444630.jpg (deflated 8%)\n",
+            "  adding: content/images/img_971445610.jpg (deflated 3%)\n",
+            "  adding: content/images/img_811926054.jpg (deflated 3%)\n",
+            "  adding: content/images/img_1446671987.jpg (deflated 0%)\n",
+            "  adding: content/images/img_374051904.jpg (deflated 2%)\n",
+            "  adding: content/images/img_142016465.jpg (deflated 7%)\n",
+            "  adding: content/images/img_93028791.jpg (deflated 4%)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "g_f5pD019XW6",
